Owner now to right of image, still need to resolve spacing above Owner, and box outside of window before it drops below img

--- a/src/app/components/dog-details/dog-details.component.css
+++ b/src/app/components/dog-details/dog-details.component.css
@@ -12,15 +12,39 @@
 h2 {text-decoration: underline; font-size: medium; font-weight: bold ;}
 a { font-size: medium;}
 
-/*span
-{
-    display: block;
-    overflow: hidden;
-    padding-left: 20px;
-    padding-right: 20px;
-
+.img_text_container {
+  display: flex;
+  align-items: flex-start;
 }
 
-span > input{ width: 100%; }*/
+.image img {
+  width: 400px;
+  height: auto;
+  display: block;
+}
+
+.right_of_img {
+  margin-left: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+@media (max-width: 800px) {
+  .img_text_container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .right_of_img {
+    margin-left: 0;
+    margin-top: 24px;
+  }
+  .image img {
+    width: 400px;
+    height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+}
 
 
